* Version 4.1.x  --  Stable Branch

Patchlevel 2

Unreleased.

** Bug Fixes

- [Enblend and Enfuse] Fix a bug in the highlight-recovery that caused
  Enfuse to bail out with the uncaught exception
    "Minimizer1D::set_bracket: minimum not bracketed".
  This addresses LaunchPad Bug #1214004.


Patchlevel 1

Released on February 15, 2013.

** Bug Fixes

- [Enblend only] Fix a race condition in the seam-line optimizer that
  can cause wrongly placed seams.

- [Enblend and Enfuse] Use a per-thread storage of all OpenMP
  Vigra-functors.  This avoids data races.

- [Enblend and Enfuse] The Boost implementation of the `Mersenne
  Twister' random number generator caused segmentation faults when
  used in the OpenMP-enabled versions of Enblend and Enfuse.  The new
  implementation is based on the GNU Scientific Library (GSL), which
  plays nicely with concurrent accesses.

- [Enblend only] Correct a mistake that causes overlapping images with
  multiple seams to be blended incorrectly.

- [Enblend only] Require the OpenGL extension
  `GL_ARB_texture_rectangle' for the `--gpu' option to work.  This
  does away with a pesky warning of OpenGL drivers that do support
  this extension and avoids crashes with drivers that don't.

  The GPU performance improvement of Enblend via `--gpu' now is only
  available with drivers that feature `GL_ARB_texture_rectangle'
  (among many other required OpenGL extensions).

  The OpenGL warning about odd texture sizes is unaffected by this
  change.

- [Enblend and Enfuse] Fix a longstanding quirk, which allowed to load
  masks that were unsuitable for processing.


* Version 4.1  "Trouble In Paradise"

Released on December 8, 2012.

** Improvements

- All deprecated options since version 4.0 have been removed.

- A new primary seam-line generator, based on a Graph-Cut algorithm,
  has been implemented during GSoC 2011 by Mikołaj Leszczyński.  The
  old Nearest-Feature Transform remains the default.  The new